namespace ProjetoBanco.Api.Domain;

public class MaquinaDeCartao : Produto
{
    public decimal TaxaMDR { get; set; }
}