namespace ProjetoBanco.Api.Domain;

public class ReceberSalario : Produto
{
    public string EmpresaConvenio { get; set; } = string.Empty;
}